K8Config/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nginxPod
  template:
    metadata:
      labels:
        component: nginxPod
    spec:
      containers:
        - name: nginx-container
          image: sujinkrishnan/my-docker-poc:messagenginx
          ports:
            - containerPort: 8080
