K8Config/controller-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-controller-pod
spec:
  type: ClusterIP
  selector:
    component: controllerpod
  ports:
    - port: 8081
      targetPort: 8081
