K8Config/happy-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: happy-service-node
spec:
  type: NodePort
  selector:
    component: happyPod
  ports:
    - port: 9090
      targetPort: 9090
