K8Config/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-node-port
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31515
  selector:
    component: nginxPod
