K8Config/sad-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sad-container
spec:
  type: ClusterIP
  selector:
    component: sadPod
  ports:
    - port: 9091
      targetPort: 9091
