K8Config/sad-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sad-loadbalancer
spec:
  type: LoadBalancer
  selector:
    component: sadPod
  ports:
    - port: 9091
      targetPort: 9091
