K8Config/ingress-message.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /happy/?(.*)
            pathType: Prefix
            backend:
              service:
                name: happy-container
                port:
                  number: 9090
          - path: /sad/?(.*)
            pathType: Prefix
            backend:
              service:
                name: sad-clusterip
                port:
                  number: 9091
